--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<img src="le-wagon.jpeg" alt="">
   <h1>Coming soon... Le Wagon</h1>
 </body>
 </html>
