Centered image and tagline

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<img src="le-wagon.jpeg" alt="">
-  <h1>Coming soon... Le Wagon</h1>
+  <div id="container">	
+	<img id="logo" src="le-wagon.jpeg" alt="">
+    <h1>Coming soon... Le Wagon</h1>
+  </div>
 </body>
 </html>
