Change of logo, update of the tagline's description and its color font

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div id="container">	
-	<img id="logo" src="le-wagon.jpeg" alt="">
-    <h1>Coming soon... Le Wagon</h1>
+	<img id="logo" src="bistro-bekas.jpeg" alt="">
+    <h1>Coming soon... Bistrô Bekas</h1>
   </div>
 </body>
 </html>
